@@ -36,6 +36,8 @@
 	- fix: segfault with "--sign" w/o supplying files (#4651).
 	- add headerWrite return code and check for errors.
 	- update python bindings from anaconda.
+	- add versions to prereq.
+	- add syntax sensitive implict prereq on rpm-3.0.3.
 
 3.0.1 -> 3.0.2
 	- eliminate armv4 entries from rpmrc (Andrew E. Mileski).
